==> IOsonata/IOsonata/ARM/Microchip/SAM4E/src/uart_sam4e.cpp <==
#include <assert.h>
#include <string.h>
#include "sam4e.h"
#include "interrupt.h"
#include "coredev/iopincfg.h"
#include "coredev/uart.h"
#include "cfifo.h"
#define SAM4_UART_CFIFO_SIZE		CFIFO_MEMSIZE(16)

UARTDEV * const UARTGetInstance(int DevNo)
{
	if (DevNo < 0 || DevNo >= s_NbSam4UartDev)
	{
		return NULL;
	}

	return s_Sam4UartDev[DevNo].pUartDev;
}

bool UARTInit(UARTDEV * const pDev, const UARTCFG *pCfg)
{
	if (pDev == NULL || pCfg == NULL)
	{
		return false;
	}

	if (pCfg->pIOPinMap == NULL || pCfg->NbIOPins <= 0)
	{
		return false;
	}

	if (pCfg->DevNo < 0 || pCfg->DevNo >= s_NbSam4UartDev)
	{
		return false;
	}

	int devno = pCfg->DevNo;
	
	if (s_Sam4UartDev[devno].SamDevId < 32)
	{
		SAM4E_PMC->PMC_PCER0 |= 1 << s_Sam4UartDev[devno].SamDevId;
	}
	else
	{
		SAM4E_PMC->PMC_PCER1 |= 1 << (s_Sam4UartDev[devno].SamDevId - 32);
	}
	
	if (pCfg->pRxMem && pCfg->RxMemSize > 0)
	{
		pDev->hRxFifo = CFifoInit(pCfg->pRxMem, pCfg->RxMemSize, 1, pCfg->bFifoBlocking);
	}
	else
	{
		pDev->hRxFifo = CFifoInit(s_Sam4UartDev[devno].RxFifoMem, SAM4_UART_CFIFO_SIZE, 1, pCfg->bFifoBlocking);
	}

	if (pCfg->pTxMem && pCfg->TxMemSize > 0)
	{
		pDev->hTxFifo = CFifoInit(pCfg->pTxMem, pCfg->TxMemSize, 1, pCfg->bFifoBlocking);
	}
	else
	{
		pDev->hTxFifo = CFifoInit(s_Sam4UartDev[devno].TxFifoMem, SAM4_UART_CFIFO_SIZE, 1, pCfg->bFifoBlocking);
	}

	pDev->DevIntrf.pDevData = &s_Sam4UartDev[devno];
	s_Sam4UartDev[devno].pUartDev = pDev;

	IOPINCFG *iopins = (IOPINCFG*)pCfg->pIOPinMap;
	
	if (pCfg->NbIOPins > 2 && pCfg->FlowControl == UART_FLWCTRL_HW)
	{
		IOPinCfg((IOPINCFG*)pCfg->pIOPinMap, pCfg->NbIOPins);
	}
	else
	{
		IOPinCfg((IOPINCFG*)pCfg->pIOPinMap, 2);
	}

	pDev->Rate = Sam4UARTSetRate(&pDev->DevIntrf, pCfg->Rate);

	if (devno < 2)
	{
		// UART
		s_Sam4UartDev[devno].pUartReg->UART_CR = UART_CR_RSTRX | UART_CR_RSTTX
				| UART_CR_RXDIS | UART_CR_TXDIS;

		uint32_t mode = UART_MR_CHMODE_NORMAL;
		
		switch (pCfg->Parity)
		{
			case UART_PARITY_ODD:
				mode |= UART_MR_PAR_ODD;
				break;
			case UART_PARITY_EVEN:
				mode |= UART_MR_PAR_EVEN;
				break;
			case UART_PARITY_MARK:
				mode |= UART_MR_PAR_MARK;
				break;
			case UART_PARITY_SPACE:
				mode |= UART_MR_PAR_SPACE;
				break;
			case UART_PARITY_NONE:
			default:
				mode |= UART_MR_PAR_NO;
				break;
		}

		s_Sam4UartDev[devno].pUartReg->UART_MR = mode;
		s_Sam4UartDev[devno].pUartReg->UART_CR = UART_CR_RXEN | UART_CR_TXEN;
		s_Sam4UartDev[devno].pUartReg->UART_IER = UART_IER_RXRDY | UART_IER_TXRDY;
		s_Sam4UartDev[devno].pUartReg->UART_CR = UART_CR_RSTSTA;
	}
	else
	{
		// USART
		s_Sam4UartDev[devno].pUSartReg->US_WPMR = US_WPMR_WPKEY_PASSWD;
		s_Sam4UartDev[devno].pUSartReg->US_MR = 0;
		s_Sam4UartDev[devno].pUSartReg->US_RTOR = 0;
		s_Sam4UartDev[devno].pUSartReg->US_TTGR = 0;
		s_Sam4UartDev[devno].pUSartReg->US_CR = US_CR_RSTTX | US_CR_TXDIS;
		s_Sam4UartDev[devno].pUSartReg->US_CR = US_CR_RSTRX | US_CR_RXDIS;
		s_Sam4UartDev[devno].pUSartReg->US_CR = US_CR_RSTRX | US_CR_RXDIS;
		s_Sam4UartDev[devno].pUSartReg->US_CR = US_CR_RTSDIS;
		s_Sam4UartDev[devno].pUSartReg->US_CR = US_CR_DTRDIS;

		uint32_t mode = US_MR_CHMODE_NORMAL;

		switch (pCfg->Parity)
		{
			case UART_PARITY_ODD:
				mode |= US_MR_PAR_ODD;
				break;
			case UART_PARITY_EVEN:
				mode |= US_MR_PAR_EVEN;
				break;
			case UART_PARITY_MARK:
				mode |= US_MR_PAR_MARK;
				break;
			case UART_PARITY_SPACE:
				mode |= US_MR_PAR_SPACE;
				break;
			case UART_PARITY_NONE:
			default:
				mode |= US_MR_PAR_NO;
				break;
		}
		
		if (pCfg->StopBits == 2)
		{
			mode |= US_MR_NBSTOP_2_BIT;
		}
		else
		{
			mode |= US_MR_NBSTOP_1_BIT;
		}

		switch (pCfg->DataBits)
		{
			case 5:
				mode |= US_MR_CHRL_5_BIT;
				break;
			case 6:
				mode |= US_MR_CHRL_6_BIT;
				break;
			case 7:
				mode |= US_MR_CHRL_7_BIT;
				break;
			default:
				mode |= US_MR_CHRL_8_BIT;
				break;
		}
		
		s_Sam4UartDev[devno].pUSartReg->US_MR = mode;

		s_Sam4UartDev[devno].pUSartReg->US_CR = US_CR_TXEN | US_CR_RXEN;
		s_Sam4UartDev[devno].pUSartReg->US_IER = US_IER_RXRDY;
		s_Sam4UartDev[devno].pUSartReg->US_CR = US_CR_RSTSTA;
	}

	s_Sam4UartDev[devno].pUartDev->bRxReady = false;
	s_Sam4UartDev[devno].pUartDev->bTxReady = true;

	pDev->DevIntrf.Type = DEVINTRF_TYPE_UART;
	pDev->DataBits = pCfg->DataBits;
	pDev->FlowControl = pCfg->FlowControl;
	pDev->StopBits = pCfg->StopBits;
	pDev->bIrDAFixPulse = pCfg->bIrDAFixPulse;
	pDev->bIrDAInvert = pCfg->bIrDAInvert;
	pDev->bIrDAMode = pCfg->bIrDAMode;
	pDev->IrDAPulseDiv = pCfg->IrDAPulseDiv;
	pDev->Parity = pCfg->Parity;
	pDev->bIntMode = pCfg->bIntMode;
	pDev->EvtCallback = pCfg->EvtCallback;
	pDev->DevIntrf.Disable = Sam4UARTDisable;
	pDev->DevIntrf.Enable = Sam4UARTEnable;
	pDev->DevIntrf.GetRate = Sam4UARTGetRate;
	pDev->DevIntrf.SetRate = Sam4UARTSetRate;
	pDev->DevIntrf.StartRx = Sam4UARTStartRx;
	pDev->DevIntrf.RxData = Sam4UARTRxData;
	pDev->DevIntrf.StopRx = Sam4UARTStopRx;
	pDev->DevIntrf.StartTx = Sam4UARTStartTx;
	pDev->DevIntrf.TxData = Sam4UARTTxData;
	pDev->DevIntrf.StopTx = Sam4UARTStopTx;
	pDev->DevIntrf.MaxRetry = UART_RETRY_MAX;
	pDev->DevIntrf.PowerOff = Sam4UARTPowerOff;
	pDev->DevIntrf.EnCnt = 1;
	atomic_flag_clear(&pDev->DevIntrf.bBusy);

	switch (devno)
	{
		case 0:
			NVIC_ClearPendingIRQ(UART0_IRQn);
			NVIC_SetPriority(UART0_IRQn, pCfg->IntPrio);
			NVIC_EnableIRQ(UART0_IRQn);
			break;
		case 1:
			NVIC_ClearPendingIRQ(UART1_IRQn);
			NVIC_SetPriority(UART1_IRQn, pCfg->IntPrio);
			NVIC_EnableIRQ(UART1_IRQn);
			break;
		case 2:
			NVIC_ClearPendingIRQ(USART0_IRQn);
			NVIC_SetPriority(USART0_IRQn, pCfg->IntPrio);
			NVIC_EnableIRQ(USART0_IRQn);
			break;
		case 3:
			NVIC_ClearPendingIRQ(USART1_IRQn);
			NVIC_SetPriority(USART1_IRQn, pCfg->IntPrio);
			NVIC_EnableIRQ(USART1_IRQn);
			break;
	}
		
	return true;
}
